--- a/src/main/resources/templates/home-view.html
+++ b/src/main/resources/templates/home-view.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link rel="stylesheet" th:href="@{/home-style.css}"/>
     <title>Crossword Solver App</title>
 </head>
 <body>
