styling of home page button

--- a/src/main/resources/templates/crossword-view.html
+++ b/src/main/resources/templates/crossword-view.html
@@ -10,7 +10,7 @@
 <body>
 <div class="content">
     <h2>So you want to find a word that would fit nicely into your crossword?</h2>
-    <p>To start, tell me how many letters your desired word consists of.</p>
+    <p>Select the number of letters in your word.</p>
     <form name="wordLengthSelector" id="wordLengthForm" action="/crossword" method="post">
 
         <input type="radio" id="length3" name="wordLength" value="3" style="display: none;"
