--- a/src/main/resources/templates/fix-builder-view.html
+++ b/src/main/resources/templates/fix-builder-view.html
@@ -9,8 +9,8 @@
 
 <body>
 <div class="content">
-    <h2>So you want to find all words that can be built using all your letters?</h2>
-    <p>To start, enter letters. You can enter up to 10 letters.</p>
+    <h2>So you want to find all words that can be built using all given letters?</h2>
+    <p>Insert every available letter. You can enter up to 10 letters.</p>
     <form name="wordInputForm" id="wordInputForm" action="/word-builder" method="post">
 
         <div id="textInputFields"></div>
