--- a/src/main/resources/static/fix-style.css
+++ b/src/main/resources/static/fix-style.css
@@ -120,3 +120,8 @@ input[type="radio"] {
 .toast.show {
     visibility: visible;
 }
+
+.home-page-link-container {
+    text-align: center;
+    margin: 20px 0;
+}
