--- a/src/main/resources/templates/flex-builder-view.html
+++ b/src/main/resources/templates/flex-builder-view.html
@@ -10,7 +10,7 @@
 <body>
 <div class="content">
     <h2>So you want to find all words that can be built using some or all your letters?</h2>
-    <p>To start, enter letters. You can enter up to 7 letters.</p>
+    <p>Insert every available letter. You can enter up to 7 letters.</p>
     <form name="wordInputForm" id="wordInputForm" action="/all-word-builder" method="post">
 
         <div id="textInputFields"></div>
