--- a/src/main/resources/templates/home-view.html
+++ b/src/main/resources/templates/home-view.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/home-style.css}"/>
-    <title>Crossword Solver App</title>
+    <title>Words Solver App</title>
 </head>
 <body>
 <h2>Are you stuck in some kind of words game?</h2>
@@ -22,7 +22,7 @@
         <div class="link-sub-container-right">
             <div class="link-description-container">
                 <h5>DESCRIPTION:</h5>
-                <p>information about this</p>
+                <p>You can enter letters as you see them in your crossword. Fill only known letters on correct positions and Crossword Solver will find all words that would fit in.</p>
             </div>
         </div>
     </div>
@@ -40,7 +40,7 @@
         <div class="link-sub-container-right">
             <div class="link-description-container">
                 <h5>DESCRIPTION:</h5>
-                <p>information about this</p>
+                <p>You can enter all letters that are available for you in a Scrabble-type game. Fixed Word Builder will generate all possible words built by using every letter once.</p>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="link-sub-container-right">
             <div class="link-description-container">
                 <h5>DESCRIPTION:</h5>
-                <p>information about this</p>
+                <p>You can enter all letters that are available for you in a Scrabble-type game. Flex Word Builder will generate all possible words from given letters. Result will contain shorter words as well as words where all letters are used.</p>
             </div>
         </div>
     </div>
