--- a/src/main/resources/static/fix-style.css
+++ b/src/main/resources/static/fix-style.css
@@ -87,16 +87,10 @@ input[type="radio"] {
 .result-box {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
 }
 
-.column {
-    flex: 0 0 auto;
-    margin-right: 10px;
-}
-
-.column p {
+.result-box p {
+    margin-right: 20px;
     margin-bottom: 5px;
 }
 
